# pybacting

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  installation.rst  managers.rst
src/pybacting/: __init__.py  __main__.py  api.py  cdk.py  cli.py  display.py  io.py  opsin.py  version.py
tests/: __init__.py  test_trivial.py
