##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybacting
version = 0.2.0-dev
description = A python wrapper around bacting
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/cthoyt/pybacting
download_url = https://github.com/cthoyt/pybacting/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pybacting/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    CDK
    cheminformatics
    chemistry

[options]
install_requires =
    scyjava

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx_automodapi

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

